--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </tbody>
             <tfoot>
                 <tr>
-                    <td colspan="4">*** copyright by Saraco. Atamang Ms.of Sc.***</td>
+                    <td colspan="4">*** copyright by Saraco Atamang Ms.of Sc.***</td>
                 </tr>
             </tfoot>
         </table>
