--- a/index.html
+++ b/index.html
@@ -124,6 +124,11 @@
         <table>
             <thead><th colspan="4" >Input Liste</th></thead>
             <tbody id="inputList">
+                <tr>
+                    <td>Uhrzeit</td>
+                    <td>Art</td>
+                    <td>Ergebnis</td>
+                </tr>
             </tbody>
             <tfoot></tfoot>
         </table>
