list style changes

--- a/index.html
+++ b/index.html
@@ -122,9 +122,13 @@
         <button onclick="farbe()" type="button" id="farbe">Submit</button>
         <br><br>
         <table>
-            <thead><th colspan="4" >Input Liste</th></thead>
+            <thead >
+                <tr id="inputHeaderOne">
+                    <td colspan="4" >Input Liste</td>
+                </tr>
+            </thead>
             <tbody id="inputList">
-                <tr>
+                <tr id="inputHeaderTwo">
                     <td>Uhrzeit</td>
                     <td>Art</td>
                     <td>Ergebnis</td>
