some big updates to inputlist

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <option value="Listerien"></option>
         </datalist>
         <input list="werte" id="wert" name="wert" placeholder="Wert" required />
-        <button type="button" id="submit">Submit</button>
+        <button type="button" id="submit">👉</button>
         <br><br>
         <table>
             <thead >
