--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <option value="Listerien"></option>
                 </datalist>
             <input  list="werte" id="wert" name="wert" placeholder="Wert" required>
-            <button type="submit" id="submit">👉</button>
+            <button type="submit" id="submit">👌</button>
         </div>
         <br><br>
         <table>
