--- a/index.html
+++ b/index.html
@@ -108,7 +108,6 @@
             </tfoot>
         </table>
         <br>
-        <div id="inputContainer">
             <input list="arten" id="art" name="art" placeholder="Art" required />
                 <datalist id="arten">
                     <option value="Gesamtkeimzahl"></option>
@@ -118,9 +117,10 @@
                     <option value="koagulase positive Staphylokokken"></option>
                     <option value="Listerien"></option>
                 </datalist>
-            <input  list="werte" id="wert" name="wert" placeholder="Wert" required>
+                <br>
+            <input  list="werte" id="wert" name="wert" placeholder="Wert" required/>
+            <br><br>
             <button type="submit" id="submit">  ✔👌 ready 🚓</button>
-        </div>
         <br><br>
         <table>
             <thead >
