--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
                     <option value="Enterobacteriaceae"></option>
                     <option value="koagulase positive Staphylokokken"></option>
                     <option value="Listerien"></option>
-                </datalist>
+                </datalist></input>
                 <br>
-            <input  list="werte" id="wert" name="wert" placeholder="Wert" required/>
-            <br><br>
+            <input  list="werte" id="wert" name="wert" placeholder="Wert" required></input>
+            <br>
             <button type="submit" id="submit">  ✔👌 ready 🚓</button>
         <br><br>
         <table>
