--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
             </tfoot>
         </table>
         <br>
+        <p id="inputContainer">
             <input list="arten" id="art" name="art" placeholder="Art" required />
                 <datalist id="arten">
                     <option value="Gesamtkeimzahl"></option>
@@ -119,9 +120,10 @@
                 </datalist></input>
                 <br>
             <input  list="werte" id="wert" name="wert" placeholder="Wert" required></input>
-            <br>
+            <br><br>
             <button type="submit" id="submit">  ✔👌 ready 🚓</button>
-        <br><br>
+        </p>
+        <br>
         <table>
             <thead >
                 <tr id="inputHeaderOne">
