--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
    </header>    
     <main>
-        <table class="farbschema">
+        <table id="farbschema">
             <thead>
                 <tr class="headerOne">
                     <th colspan="4">Mikrobiologische Kriterien Innereien/Organe</th>
@@ -122,6 +122,8 @@
             <input  list="werte" id="wert" name="wert" placeholder="Wert" required></input>
             <br><br>
             <button type="submit" id="submit">  ✔👌 ready 🚓</button>
+            <br><br>
+            <a id="saveLog"></a>
         </p>
         <br>
         <table>
@@ -137,7 +139,7 @@
                     <td>Ergebnis</td>
                 </tr>
             </tbody>
-            <tfoot></tfoot>
+            <tfoot><a href=""></a></tfoot>
         </table>
     </main>
     <footer></footer>
