--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <br><br>
             <button type="submit" id="submit">enter</button>
             <br><br>
-            <a id="saveLog"></a>
+            <a id="deleteLog"></a>         
         </p>
         <br>
         <table id="inputTable">
@@ -146,6 +146,11 @@
             </tbody>
             <tfoot><a href=""></a></tfoot>
         </table>
+        <br>
+        <p id="jsonLogStyle">
+            <button type="submit" id="createJsonFile">Create JsonFile</button>
+            <a id="jsonLog"></a>
+        </p>
     </main>
     <footer></footer>
 </body>
