huge W big work done :)

--- a/index.html
+++ b/index.html
@@ -134,21 +134,20 @@
         <table id="inputTable">
             <thead >
                 <tr >
-                    <td id="inputHeaderOne" colspan="4"></td>
+                    <td id="inputHeaderOne" colspan="5"></td>
                 </tr>
             </thead>
             <tbody id="inputList">
                 <tr id="inputHeaderTwo">
                     <td>Uhrzeit</td>
                     <td>Art</td>
-                    <td>Ergebnis</td>
+                    <td colspan="3">Ergebnis</td>
                 </tr>
             </tbody>
             <tfoot><a href=""></a></tfoot>
         </table>
         <br>
         <p id="jsonLogStyle">
-            <button type="submit" id="createJsonFile">Create JsonFile</button>
             <a id="jsonLog"></a>
         </p>
     </main>
