--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </table>
         <br><br>
         <p id="inputCompanyContainer">
-            <input type="text" id="inputCompany" placeholder="Firma" required>
+            <input type="text" id="inputCompany" placeholder="Auftraggeber" required>
             <button id="companyBtn">enter</button>
         </p>
         <br>
