--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <table id="inputTable">
             <thead >
                 <tr class="infoHeader">
-                    <td colspan="1">Auftraggeber:</td>                    
+                    <td colspan="1">Client:</td>                    
                     <td id="client" colspan="4"></td>
                 </tr>
                 <tr class="infoHeader">
