--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
         <table id="inputTable">
             <thead >
                 <tr class="infoHeader">
-                    <td colspan="1">Client:</td>                    
+                    <td colspan="1">Client</td>                    
                     <td id="client" colspan="4"></td>
                 </tr>
                 <tr class="infoHeader">
-                    <td colspan="1">Labor:</td>                    
+                    <td colspan="1">Labor</td>                    
                     <td id="laboratory" colspan="4"></td>                    
                 </tr>
             </thead>
