--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
             <a id="jsonLog"></a>
         </p>
     </main>
+    <button id="send">Send</button>
     <footer></footer>
 </body>
 </html>
